[gd_scene load_steps=7 format=3 uid="uid://f6d5gv27s7ck"]

[ext_resource type="Script" uid="uid://dxhhu3s3x0dmj" path="res://scripts/input_prompt_window.gd" id="1_tgc67"]
[ext_resource type="AudioStream" uid="uid://bwrtx4d21q0u" path="res://assets/sounds/UI/OverlayOpen.wav" id="2_lsrb5"]
[ext_resource type="AudioStream" uid="uid://vwx7j0muuk3a" path="res://assets/sounds/UI/ButtonPress.wav" id="3_eroan"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5rne"]
bg_color = Color(0, 0, 0, 0.592157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4wfs"]
bg_color = Color(0.147672, 0.147672, 0.147672, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r5rne"]

[node name="InputPromptWindow" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r5rne")
script = ExtResource("1_tgc67")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.5
offset_top = -128.0
offset_right = 228.5
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y4wfs")

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.5
offset_top = -128.0
offset_right = 224.5
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="BG/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "asdadasdadasd"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="BG/VBoxContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="BG/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BG/VBoxContainer"]
custom_minimum_size = Vector2(228.5, 0)
layout_mode = 2

[node name="Confirm" type="Button" parent="BG/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 45)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_r5rne")
text = "Confirm"

[node name="Cancel" type="Button" parent="BG/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 45)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_r5rne")
text = "Cancel"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_lsrb5")

[node name="pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_eroan")

[connection signal="pressed" from="BG/VBoxContainer/VBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
